crates/monochange_integration_tests/tests/snapshots/prepared_release_cache_invalidation__body_only_rewritten_rendered.snap
---
source: crates/monochange_integration_tests/tests/prepared_release_cache_invalidation.rs
expression: rendered_changelog(&rewritten)
---
## alpha 1.1.0 (2026-04-06)

### Features

- **Harden the alpha feature.**
