crates/monochange_integration_tests/tests/snapshots/prepared_release_cache_invalidation__explicit_artifact_second_release.snap
---
source: crates/monochange_integration_tests/tests/prepared_release_cache_invalidation.rs
expression: second
---
command `release` completed
version: 1.1.0
released packages: alpha
release targets:
- package alpha -> alpha/v1.1.0 (tag: true, release: true)
release manifest: .monochange/local/release-manifest.json
changed files:
- Cargo.toml
- crates/alpha/CHANGELOG.md
- crates/alpha/Cargo.toml
deleted changesets:
- .changeset/feature.md
commands:
- reused prepared release artifact `.monochange/local/explicit-prepared-release.json`
