crates/monochange_integration_tests/tests/snapshots/prepared_release_cache_invalidation__severity_in_place_major.snap
---
source: crates/monochange_integration_tests/tests/prepared_release_cache_invalidation.rs
expression: preview_summary(&major)
---
{
  "changed_files": [
    "Cargo.toml",
    "crates/alpha/CHANGELOG.md",
    "crates/alpha/Cargo.toml"
  ],
  "changelog_entries": [
    "#### Replace the alpha wire protocol"
  ],
  "release_targets": {
    "alpha": "2.0.0"
  },
  "released_packages": [
    "alpha"
  ]
}
