crates/monochange_integration_tests/tests/snapshots/prepared_release_cache_invalidation__unchanged_first_preview.snap
---
source: crates/monochange_integration_tests/tests/prepared_release_cache_invalidation.rs
expression: first
---
command `preview` completed (dry-run)
version: 1.1.0
released packages: alpha
release targets:
- package alpha -> alpha/v1.1.0 (tag: true, release: true)
release manifest: .monochange/local/release-manifest.json
changed files:
- Cargo.toml
- crates/alpha/CHANGELOG.md
- crates/alpha/Cargo.toml
commands:
- skipped release record: dry-run preview (pass `--release-json` to write release.json)
